--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@ai-sdk/cerebras": "^2.0.34",
     "@opentui/core": "^0.1.81",
     "@opentui/react": "^0.1.81",
+    "ai": "^6.0.97",
     "react": "^19.2.4"
   }
 }
