--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "source-stage",
+  "name": "stage-tui",
   "version": "1.0.5",
   "description": "Minimalist TUI Git client",
   "author": "jenslys",
