--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@opentui/core": "^0.1.81",
     "@opentui/react": "^0.1.81",
     "ai": "^6.0.97",
+    "gpt-tokenizer": "^3.4.0",
     "react": "^19.2.4"
   }
 }
